# SquishedMorse

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  LetterChecker.cpp  LetterChecker.h  MorseCoder.cpp  MorseCoder.h  main.cpp
tst/: CMakeLists.txt  LetterCheckerTest.cpp  MorseCoderTest.cpp
